# instrumentality

./: .gitignore  .rustfmt.toml  Cargo.toml  InstrumentalityExample.toml  InstrumentalityTestExample.toml  README.md  Rocket.toml
.github/workflows/: build_and_test.yml  build_then_test.yml
src/: config.rs  data.rs  database.rs  group.rs  key.rs  lib.rs  main.rs  mdb.rs  profile.rs  response.rs  server.rs  subject.rs  user.rs
src/routes/: add.rs  catchers.rs  create.rs  default.rs  delete.rs  frontpage.rs  invite.rs  login.rs  mod.rs  queue.rs  register.rs  reset.rs  types.rs  update.rs  view.rs
src/utils/: deserialise_array.rs
tests/: common.rs  integration.rs  integration_add.rs  integration_frontpage.rs  integration_groups.rs  integration_invite.rs  integration_login.rs  integration_misc.rs  integration_register.rs  integration_reset.rs  integration_subject.rs  integration_types.rs  lib.rs
