[package]
name = "instrumentality"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.4"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tower = { version = "0.4.12", features = ["timeout"] }
tower-http = { version = "0.3.2", features = ["set-header"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

mongodb = "2.1.0"
tokio = "1.18.1"
toml = "0.5.8"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.136"
serde_json = "1.0.78"
getrandom = "0.2.4"
uuid = "0.8.2"
tokio-stream = "0.1.8"

[dev-dependencies]
regex = "1.5.5"

[[bin]]
name = "instrumentality"

[lib]
name = "instrumentality"
path = "src/lib.rs"