[package]
name = "instrumentality"
version = "0.2.1"
edition = "2021"
rust-version = "1.60.0"
description = "A data aggregation platform."
authors = ["James <james \"at\" berserksystems.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/berserksystems/instrumentality/"

exclude = ["assets/", ".github/"]

[[bin]]
name = "instrumentality"

[lib]
name = "instrumentality"
path = "src/lib.rs"

[dependencies]
axum = "0.5.7"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tower = { version = "0.4.12", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["set-header"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = "1.19.2"
tokio-stream = "0.1.9"

mongodb = "2.2.2"
toml = "0.5.9"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.137"
getrandom = "0.2.6"
uuid = { version = "1.1.1", features = ["v4"] }


[dev-dependencies]
regex = "1.5.5"
hyper = { version = "0.14.18", features = ["client"] }
hyper-tls = "0.5.0"
serde_json = "1.0"
mime = "0.3.16"